# bgc_atlas

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: esm.md  pipeline.md
reports/: ablation_metrics.json  biological_case_studies.json  encoder_sweep_results.csv  encoder_sweep_results.json  learned_ablation_metrics.json  learned_eval_summary.json  learned_novelty_comparison.csv  learned_novelty_comparison.json  learned_temporal_holdout.json  learned_temporal_holdout_ranking.csv  learned_train_history.json  novelty_by_class.csv  novelty_disagreement_by_class.csv  novelty_ranking.csv  novelty_representation_comparison.csv  novelty_representation_comparison.json  predicted_novelty_ranking.csv  sanity_metrics.json  temporal_holdout.json  temporal_holdout_ranking.csv  validation_audit.json
scripts/: download_mibig.py  reproduce.sh  run_apply.py  run_atlas.py  run_case_studies.py  run_encoder_sweep.py  run_esm_embed.py  run_featurize.py  run_novelty.py  run_sanity_classify.py  run_validate.py
scripts/runpod/: bootstrap.sh  bootstrap_train.sh  launch_gpu_job.py  launch_train_job.py
src/bgcatlas/: __init__.py  cli.py  config.py  embed_pool.py  paths.py
src/bgcatlas/atlas/: __init__.py  run.py
src/bgcatlas/data/: antismash.py  apply.py  curate.py  download.py
src/bgcatlas/featurize/: __init__.py  run.py
src/bgcatlas/models/: __init__.py  ablation.py  encoder.py  run.py  train_contrastive.py
src/bgcatlas/novelty/: __init__.py  embed_compare.py  learned_eval.py  run.py  temporal.py  validate.py
src/npdiscovery/: __init__.py  cli.py
src/npdiscovery/atlas/: run.py
src/npdiscovery/data/: __init__.py  apply.py  curate.py  download.py
src/npdiscovery/featurize/: run.py
src/npdiscovery/models/: run.py
src/npdiscovery/novelty/: __init__.py  run.py  validate.py
tests/: test_encoder.py  test_pipeline.py
tests/fixtures/: mini_antismash.json  mini_region.gbk  sample_bgc.json
