[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bgc-atlas"
version = "0.1.0"
description = "CPU-only biosynthetic architecture atlas: map BGC space and rank architecture-novel regions (MIBiG)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Eric Snow" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "biopython>=1.81",
  "requests>=2.31",
  "tqdm>=4.66",
  "pyarrow>=14.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
umap = ["umap-learn>=0.5.5"]
embed = ["torch>=2.2", "fair-esm>=2.0.0"]

[project.scripts]
bgc-download = "bgcatlas.cli:download_main"
bgc-featurize = "bgcatlas.cli:featurize_main"
bgc-sanity = "bgcatlas.cli:sanity_main"
bgc-atlas = "bgcatlas.cli:atlas_main"
bgc-novelty = "bgcatlas.cli:novelty_main"
bgc-validate = "bgcatlas.cli:validate_main"
bgc-apply = "bgcatlas.cli:apply_main"
bgc-temporal = "bgcatlas.cli:temporal_main"
bgc-ablation = "bgcatlas.cli:ablation_main"
bgc-novelty-compare = "bgcatlas.cli:novelty_compare_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
