[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bgc-atlas"
version = "0.3.0"
description = "Biosynthetic gene cluster atlas and novelty scoring on MIBiG"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Eric Snow" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "biopython>=1.81",
  "requests>=2.31",
  "tqdm>=4.66",
  "pyarrow>=14.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.9"]
umap = ["umap-learn>=0.5.5"]
embed = ["torch>=2.2", "transformers>=4.40"]
# numpy<2 for torch 2.2.x wheels on older platforms
train = ["torch>=2.2,<2.6", "numpy>=1.24,<2"]

[project.scripts]
bgc-download = "bgcatlas.cli:download_main"
bgc-featurize = "bgcatlas.cli:featurize_main"
bgc-sanity = "bgcatlas.cli:sanity_main"
bgc-atlas = "bgcatlas.cli:atlas_main"
bgc-novelty = "bgcatlas.cli:novelty_main"
bgc-validate = "bgcatlas.cli:validate_main"
bgc-apply = "bgcatlas.cli:apply_main"
bgc-temporal = "bgcatlas.cli:temporal_main"
bgc-ablation = "bgcatlas.cli:ablation_main"
bgc-novelty-compare = "bgcatlas.cli:novelty_compare_main"
bgc-train-encoder = "bgcatlas.cli:train_encoder_main"
bgc-learned-eval = "bgcatlas.cli:learned_eval_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 110
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
